# DF2025_Vizor_agents

./: .env.example  .gitignore  250616_workflow.gh  250618_workflow.gh  AGENT_VISUALIZATION_DESIGN_PLAN.md  CHINA_WORKSHOP_SETUP.md  CLAUDE.md  CRITICAL_MEMORY_SYSTEM_EVALUATION.md  FINAL_INTEGRATION_SUMMARY.md  GEOMETRY_AGENT_IMPROVEMENTS.md  INTEGRATION_TEST.md  MCP_CLIENT_IMPLEMENTATION_ROADMAP.md  MCP_IMPLEMENTATION_GUIDE.md  PROBLEMS.md  README.md  REALISTIC_VALIDATION_SUMMARY.md  STDIO_IMPLEMENTATION.md  TWO_TERMINAL_USAGE_GUIDE.md  VALIDATION_REPORT.md  WEBRTC_VOICE_DEBUGGING.md  WORKSHOP_TROUBLESHOOTING.md  WSL_NETWORKING_GUIDE.md  bridge_agents_sequence_diagram.puml  chat2lasath.py  chat2realtime_interview.py  check_model_topic.py  correct_transform_listener.py  current_task.md  debug_connection.py  debug_mcp_connection.py  debug_session_id.py  diagnose_grasshopper.py  discover_topics.py  evaluation_criteria.json  explore_ros_docker.py  gtf_inner.js  gtf_srf.js  import_found_materials.py  interface_todo.md  launch_debug.py  (+89 more)
.cursor/: mcp.json
Grasshopper file_Reclaimed/: design agent test.gh  geometr preview.gh
archive/: CHINA_WORKSHOP_SETUP.md  README.md  SysLogic_agent_original.md  WORKSHOP_TROUBLESHOOTING.md  WSL_NETWORKING_GUIDE.md  automatic_agent_tracking.md  check_wsl_setup.sh  debug_all_topics.py  debug_connection.py  debug_ros_listener.py  diagnose_grasshopper.py  geometry_agent_old.md  geometry_agent_smolagents.py  grasshopper_bridge_test_server.py  http_mcp_server.py  listen_transform.py  material_inventory_backup.json  monitor_ar_transforms.py  official_adapter.py  official_mcp_server_fixed.py  run_vizor_listener.py  simple_debug.py  simple_model_listener.py  start_TEAM.sh  test_15_exchange_memory_integration.py  test_category_logging.py  test_category_monitoring.py  test_complete_system.py  test_debug_console.py  test_gaze_connection.py  test_gemini_function_calling.py  test_gh_commands.py  test_grasshopper_direct.py  test_hybrid_backend.py  test_lcars_backend.py  test_main_integration.py  test_memory_integration_focused.py  test_otel_simple.py  test_phoenix_backend.py  test_smolagents_instrumentation.py  (+6 more)
archive/debug_scripts/: deploy_and_test_bridge.py  start_bridge_test_server.bat  start_manual_server.py
archive/docs_development/: BRIDGE_DEPLOYMENT_FINAL.md  COMMIT_PLAN.md  DEPLOY_TCP_BRIDGE.md  FIX_TCP_BRIDGE_WSL.md  HTTP_MCP_DEPLOYMENT_GUIDE.md  INTEGRATION_TEST_GUIDE.md  SIMPLE_TCP_DEPLOYMENT.md  TCP_BRIDGE_DEPLOYMENT_GUIDE.md
archive/miscellaneous/: fastmcp_server.py  http_adapter.py  manual_mcp_server.py  standalone_server.py  status_monitor.py
archive/old_agents/: base_agent.py  bridge_reference_agent.py  factory_demo.py  geometry_agent_stdio.py  material_agent.py  triage_agent.py
docs/: Anthropic_agents_guide.md  OpenAI_building_agents.md  WORKSHOP_LOGGING.md  smolagents_refactor_summary.md
examples/: 040725_workflow.gh  250618_workflow.gh  250619_workflow.gh  250619_workflow_test.gh  250620_workflow.gh  250620_workflow_test.gh  250624_workflow.gh  250624_workflow_test.gh  290625_workflow.gh  290625_workflow_reclaimed.gh  Medel GH Script.gh  Model Script (Group 1).gh  Model Script (Group 1).gh.3dm  Model Script (Group 1).gh.3dm.rhl  bridge_reference_integration.py  surface_agent_2.gh  workshop_logging_example.py
grasshopper script/: Medel GH Script.gh
src/bridge_design_system/mcp/: README.md  __init__.py  fastmcp_server_clean.py  http_mcp_server.py  manual_http_server.py  mcp_tools_utils.py  pyproject.toml  setup.py  smolagents_integration.py  streamable_http_server.py  sync_mcp_tools.py
src/bridge_design_system/mcp/GH_MCP/: BUILD_INSTRUCTIONS.md  GH_AssemblyInfo.cs  README.md  SimpleMCPBridge.cs  TEST_INSTRUCTIONS.md  VizorAgents.GH_MCP.csproj  VizorAgents.GH_MCP.sln  fix_references.ps1  fix_references.py  fix_references.sh
src/bridge_design_system/mcp/GH_MCP/GH_MCP/: GH_MCPComponent.cs
src/bridge_design_system/mcp/GH_MCP/GH_MCP/Commands/: ComponentCommandHandler.cs  ConnectionCommandHandler.cs  DocumentCommandHandler.cs  GrasshopperCommandRegistry.cs
src/bridge_design_system/mcp/GH_MCP/Properties/: AssemblyInfo.cs
src/bridge_design_system/mcp/GH_MCP/gha/: GH_MCP.gha  GH_MCP.runtimeconfig.json
src/bridge_design_system/mcp/grasshopper_mcp/: __init__.py  __main__.py  bridge.py  bridge_http.py  http_server.py  official_mcp_server.py
src/bridge_design_system/mcp/grasshopper_mcp/tools/: __init__.py
src/bridge_design_system/mcp/grasshopper_mcp/tools/core/: __init__.py  components.py  connections.py  document.py  patterns.py
src/bridge_design_system/mcp/grasshopper_mcp/tools/vizor/: __init__.py  components.py
src/bridge_design_system/mcp/grasshopper_mcp/utils/: __init__.py  communication.py
src/bridge_design_system/whisper-voice-assistant/: .env.example  .gitignore  INTEGRATION_GUIDE.md  LICENSE  README.md  pyproject.toml  testing.py  voice_assistant.py
system_prompts/: Catelogue_Smolagent.md  SysLogic_agent.md  backup_geometry_agent.md  category_agent.md  chat_agent.md  design_agent.md  design_agent_backup.md  design_agent_test.md  geometry_agent.md  geometry_agent_202507031910.md  geometry_agent_202507032043.md  materia_managment_agent.md  rational_agent.md  surface_agent.md  triage_agent.md
tests/: GAZE_INTEGRATION_TESTING.md  MEMORY_SYSTEM_CRITICAL_ANALYSIS.md  conftest.py  demo_contextual_vs_hardcoded.py  demo_gaze_flow.py  demo_workflow_comparison.py  test_contextual_material_recommendations.py  test_enhanced_gaze_logic.py  test_gaze_integration.py  test_gaze_logic.py  test_geometry_creation.py  test_improved_efficiency.py  test_mcp_geometry_simple.py  test_memory_edge_cases.py  test_memory_integration.py  test_memory_performance.py  test_memory_race_conditions.py  test_smolagents_refactor.py  test_syslogic_optimization_workflow.py
tutorials/: OPENTELEMETRY_HOWTO.md  add_agent_tracking_tutorial.md  automatic_agent_tracking.md  introduction_to_smolagents.ipynb  rational_agent_tutorial.md  rational_smolagents_complete.py  workshop_logging_tutorial.md
workshop_logs/: README.md  workshop_analysis.csv
(+327 files in other folders)
