[project]
name = "vizor-agents"
version = "0.2.0"
description = "AR-assisted bridge design system using AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "smolagents>=1.4.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.4.0",
    "requests>=2.31.0",
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "websockets>=11.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]

[project.scripts]
vizor-agents = "bridge_design_system.main:main"

[project.urls]
Homepage = "https://github.com/Samulko/vizor_agents"
Repository = "https://github.com/Samulko/vizor_agents"
Issues = "https://github.com/Samulko/vizor_agents/issues"

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "ruff",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bridge_design_system*"]

[tool.setuptools.package-data]
bridge_design_system = ["py.typed"]
