[project]
name = "vizor-agents"
version = "0.2.0"
description = "AR-assisted bridge design system using AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "smolagents[mcp]>=1.4.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.4.0",
    "requests>=2.31.0",
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "websockets>=11.0.0",
    "click>=8.0.0",
    "mcp>=1.9.3",
    "fastmcp>=0.1.0",
    "starlette>=0.45.3",
    "anyio>=4.9.0",
    "aiohttp>=3.9.0",
    # "grasshopper-mcp",  # Removed - causes local dependency issues
    "duckduckgo-search>=8.0.3",
    "mcpadapt[smolagents]>=0.1.9",
    "psutil>=5.9.0",
    "roslibpy>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]
voice = [
    "pyaudio>=0.2.13",
    "openai-whisper>=20231117",
    "openai>=1.0.0",
    "numpy>=1.24.1",
    "pvporcupine>=3.0.0",
    "pvrecorder>=1.2.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "pvcobra>=2.0.0",
    "numba>=0.58.0",
]

[project.scripts]
vizor-agents = "bridge_design_system.main:main"

[project.urls]
Homepage = "https://github.com/Samulko/vizor_agents"
Repository = "https://github.com/Samulko/vizor_agents"
Issues = "https://github.com/Samulko/vizor_agents/issues"

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "ruff",
]

# [tool.uv.sources]
# grasshopper-mcp = { path = "src/bridge_design_system/mcp", editable = true }  # Removed

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
]

# UV mirror configuration for China firewall bypass
# Active configuration - change mirror if needed for your location
[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

# Alternative mirrors (comment out active one above, uncomment one below):
# [[tool.uv.index]]
# name = "tsinghua"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# default = true

# [[tool.uv.index]]
# name = "ustc"
# url = "https://mirrors.ustc.edu.cn/pypi/simple"
# default = true

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bridge_design_system*"]

[tool.setuptools.package-data]
bridge_design_system = ["py.typed"]
