[project]
name = "grasshopper-mcp"
version = "0.1.0"
description = "Grasshopper MCP Bridge Server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Alfred Chen", email = "yanlin.hs12@nycu.edu.tw"}
]
license = {text = "MIT"}
keywords = ["grasshopper", "mcp", "bridge", "server", "rhinoceros", "parametric", "design"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.1.0",
    "fastmcp>=0.1.0",
    "websockets>=10.0",
    "aiohttp>=3.8.0",
]

[project.urls]
"Homepage" = "https://github.com/alfredatnycu/grasshopper-mcp"
"Bug Tracker" = "https://github.com/alfredatnycu/grasshopper-mcp/issues"

[project.scripts]
grasshopper-mcp = "grasshopper_mcp.bridge:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["grasshopper_mcp", "grasshopper_mcp.utils", "grasshopper_mcp.tools", "grasshopper_mcp.tools.core", "grasshopper_mcp.tools.vizor"]
include-package-data = true

[tool.setuptools.package-data]
grasshopper_mcp = ["*.json", "**/*.json"]

# UV-specific configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

# UV mirror configuration for China firewall bypass
# Uncomment and modify as needed for your workshop
# [[tool.uv.index]]
# name = "tsinghua"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# default = true